# protein_annotation_toolkit

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: Tutorial.ipynb  fetch_uniprot_samples.py  simple_demo.py
examples/data/uniprot_xml/: P13773.xml  P29274.xml  P41595.xml
migrations/: env.py
scripts/: init_db.sql
src/protein_annotation_toolkit/: __init__.py  cli.py  config.py  exceptions.py  validators.py
src/protein_annotation_toolkit/api/: __init__.py  app.py
src/protein_annotation_toolkit/clients/: __init__.py  base.py  blast.py  kegg.py  uniprot.py
src/protein_annotation_toolkit/core/: __init__.py  logging.py
src/protein_annotation_toolkit/db/: __init__.py  base.py  models.py  session.py
src/protein_annotation_toolkit/parsers/: __init__.py  blast_xml.py  text.py  uniprot_xml.py
src/protein_annotation_toolkit/services/: __init__.py  ingest.py  query.py  refresh.py
src/protein_annotation_toolkit/utils/: __init__.py  sequence.py
src/protein_annotation_toolkit/visualization/: __init__.py  plots.py
tests/: conftest.py
tests/integration/: test_database_workflow.py
tests/unit/: test_parsers.py  test_validators.py
