[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-annotation-toolkit"
version = "0.1.0"
description = "A bioinformatics toolkit for protein annotation and database management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bioinformatics", "protein", "uniprot", "blast", "kegg", "annotation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core framework
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary,pool]>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async HTTP
    "aiohttp>=3.9.0",
    "aiodns>=3.1.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Parsing
    "lxml>=5.1.0",

    # Biological data
    "biopython>=1.83",

    # HTTP with retry
    "tenacity>=8.2.0",

    # Logging
    "structlog>=24.1.0",

    # Export formats
    "orjson>=3.9.0",

    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
cache = [
    "redis[hiredis]>=5.0.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
visualization = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]
export = [
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-postgresql>=5.0.0",

    # Code quality
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.12.0",

    # Dev tools
    "ipython>=8.19.0",
]
all = [
    "protein-annotation-toolkit[cache,api,visualization,export,dev]",
]

[project.scripts]
pat = "protein_annotation_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/protein-annotation-toolkit"
Repository = "https://github.com/yourusername/protein-annotation-toolkit"
Issues = "https://github.com/yourusername/protein-annotation-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=protein_annotation_toolkit --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__.py
